modules/k8s/env/k3s/gogs/01-gogs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gogs-service
  namespace: gogs
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: gogs
    tier: frontal
  type: ClusterIP
